# piaic-q2-assignment-2

packaged-app/: README.md  pyproject.toml
packaged-app/src/packaged_app/: myfile.py
simple-app/: README.md  main.py
