[project]
name = "packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hamza", email = "hamza.ittefaq@ssasoft.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
packaged-app = "packaged_app:main"
myfile = "packaged_app.myfile:sample"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
